# godopus

./: .gitmodules  CMakeLists.txt  README.md  version.script
.github/workflows/: build.yml
src/: CMakeLists.txt  GodOpusDecoder.cpp  GodOpusDecoder.hpp  GodOpusEncoder.cpp  GodOpusEncoder.hpp  RegisterExtension.cpp
templates/: CMakeLists.txt  template.gdextension.in
